--- a/inc/stylesheet.css
+++ b/inc/stylesheet.css
@@ -29,6 +29,7 @@ header h1 {
     background-clip: text;
     -webkit-background-clip: text;
     text-align: center;
+    padding: 0 10px;
 }
 @media screen and (max-width: 900px) {
     header h1 {
